# osu7

./: Cargo.toml
.github/workflows/: release.yml
osu7-client/: Cargo.toml  build.rs
osu7-client/src/: app.rs  core.rs  main.rs  schema.rs
osu7-client/src/schema/: mod.rs  streamcompanion.rs  tosu.rs
osu7-i2c/: Cargo.toml
osu7-i2c/examples/: hello.rs
osu7-i2c/src/: lib.rs  main.rs
