[package]
name = "osu7-client"
version = "0.1.0"
edition = "2021"
description = "Client for the Osu7 project."

[[bin]]
name = "osu7"
path = "src/main.rs"

[dependencies]
image = "0.25.5"
tao = "0.31.0"
tray-icon = "0.19.2"

osu7-i2c = { path = "../osu7-i2c" }
mcp2221 = "0.1.1"

tungstenite = "0.26.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
getset = "0.1.3"
lazy_static = "1.5.0"

[build-dependencies]
winresource = "0.1.19"